 # [#30062] Base Item option in mod_menu has no effect [regression]. Thanks René Alain Erichsen
 # [#30422] Tags drill down incorrectly finds match to multi-tag tagged items menu item. Thanks Mark
 # [#30210] Undefined index errors by using the style 'beezTabs' at an beez template. Thanks Constantin Romankiewicz
 # [#30444] Newfeeds Hide icon wrong colour

03-Apr-2013 Jean-Marie Simonet
 # [#30349] Cleaned up use of database & query objects. Thanks Peter van Westen and Michael Babker

-------------------- 3.1 Beta 3 Release [30-Mar-2012] ------------------

29-Mar-2013 Michael Babker
 # [#30391] Fixes array not being initialized.  Thanks Peter
 # [#30317] Synch session check bug fix from platform.  Thanks Elin
 # [#30419] using foreach with nonarray in com_finder's feed view.  Thanks Elijah
 ^ [#30426] Sync HTML package to the Platform
 ^ [#30297] Changed MooTools to jQuery based color picker.  Thanks Peter
 ^ [#30425] Remove duplicated filterText() methods
 # [#29551] Fixed list_price and sale_price.  Thanks Gabriele
 # [#30076] Pagination does not work for components with more than one administrative view.  Thanks Ram
 # Incorrect field names used in JTableCorecontent (discovered implementing unit tests)

29-Mar-2013 Mark Dexter
 # [#30205] findmanifest should prioritize main folder manifests. Thanks Roberto.
 # [#29680] JLIB_DATABASE_QUERY_FAILED when upgrading to 3.0.2 (Postgresql: invalid input syntax for integer). Thanks Pierre-Louis Bonicoli.
 # [#30107] Redirect plugin needs to be disabled by default. Thanks Ram Tripathi.

29-Mar-2013 Jean-Marie Simonet
 # [#29709] Imposed translation on menu description. Thanks Marco and Brian.

28-Mar-2013 Jean-Marie Simonet
 # [#30415] *Multilanguage 3.1: SIngle article display does not filter correctly author contact per language.
 $ Updating installation file: ckb-IQ.ini
 # [#30388] Routing on the compact list tagged items layout, default tagged items layout and similar tags module. Thanks Mark.