@@ -33,6 +33,7 @@ $ -> Language fix or change
  # [#30422] Tags drill down incorrectly finds match to multi-tag tagged items menu item. Thanks Mark
  # [#30210] Undefined index errors by using the style 'beezTabs' at an beez template. Thanks Constantin Romankiewicz
  # [#30444] Newfeeds Hide icon wrong colour
+ # [#30450] Remove moduleclass suffix from <input> and <button> elements in mod_search. Thanks Thomas Hunziker
 
 03-Apr-2013 Jean-Marie Simonet
  # [#30349] Cleaned up use of database & query objects. Thanks Peter van Westen and Michael Babker
